--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
+---
 layout: default
-title: nguonkhoeun
-
+title: nguon khoeun, learning
+---
 <div class="blurb">
 	<h1>Hi there, I'm Nguon Khoeun!</h1>
-	<p>I'm learning to code using jekyll and github <a href="/about">Read more about my life...</a></p>
+	<p>I'm learning to code.<a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
